--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --color-brand-red: #D93036;
-  --color-brand-red-hover: #b92b30;
+  --color-brand-red: #E76E53;
+  --color-brand-red-hover: #CD5643;
   --font-sans: 'Inter', ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
